<?xml version="1.0"?>
<package format="3">
  <name>mcp_can_rpi</name>
  <version>1.0.0</version>
  <description>RPI3 library for MCP2515 module (CAN bus interface) through SPI GPIOs</description>
  <author>Edouard Renard</author>
  <maintainer email="e.renard@niryo.com">Edouard Renard</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>

  <export>
<build_type>ament_cmake</build_type>
  </export>
</package>
