<?xml version="1.0"?>
<package format="3">
  <name>niryo_one_bringup</name>
  <version>2.3.3</version>
  <description>Provides roslaunch scripts to start Niryo One packages and ros params</description>
  <author>Edouard Renard</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <license>GPLv3</license>

  
      <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
<exec_depend>ros2launch</exec_depend>

  <export>
<build_type>ament_cmake</build_type>
  </export>
</package>
