<!-- <package> -->
<package format="3">
    <name>niryo_one_msgs</name>
    <version>2.3.3</version>
    <description>Niryo One ROS messages used in other Niryo One packages</description>
    <author>Edouard Renard</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_msgs</depend>
    <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
<depend>rclcpp_action</depend>

<member_of_group>rosidl_interface_packages</member_of_group>

    <export>
<build_type>ament_cmake</build_type>
    </export>
</package>
