<?xml version="1.0"?>
<package format="3">
    <name>niryo_one_rpi</name>
    <version>2.3.3</version>
    <description>Provides functionalities to control end-effectors and accessories for Niryo One</description>
    <author>Edouard Renard</author>
    <maintainer email="pascal.stoop@pasto.ch">Pascal Stoop</maintainer>
    <license>GPLv3</license>

    <depend>rclpy</depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>niryo_one_msgs</build_depend>

    <exec_depend>python3-rpi.gpio</exec_depend>
    
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>niryo_one_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>niryo_one_msgs</exec_depend>

<export>
  <build_type>ament_python</build_type>
</export>
</package>
